--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,24 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-    compile("org.springframework.boot:spring-boot-devtools")
+    compile(
+        "org.springframework.boot:spring-boot-starter-thymeleaf",
+        "org.springframework.boot:spring-boot-devtools",
+        "org.springframework:spring-context",
+        "org.springframework:spring-core",
+        "org.springframework:spring-webmvc",
+        "org.springframework:spring-tx",
+        "org.springframework:spring-jdbc",
+        "org.hsqldb:hsqldb",
+        "org.slf4j:jcl-over-slf4j"
+    )
+
+
+    compile group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.1.1'
+
+    /*runTime(
+        "org.slf4j:slf4j-api"
+    )*/
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
