--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,6 @@ war {
     baseName = appName
     version = appVersion
 }
-
-jar {
-    baseName = appName
-    version =  appVersion
-}
-
 repositories {
     mavenCentral()
 }
@@ -32,27 +26,33 @@ repositories {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+def v = [
+        security: '4.2.0.RELEASE',
+        thy_security: '2.1.2.RELEASE'
+]
+
 dependencies {
     compile(
-        "org.springframework.boot:spring-boot-starter-thymeleaf",
-        "org.springframework.boot:spring-boot-devtools",
-        "org.springframework:spring-context",
-        "org.springframework:spring-core",
-        "org.springframework:spring-webmvc",
-        "org.springframework:spring-tx",
-        "org.springframework:spring-jdbc",
-        "org.hsqldb:hsqldb",
-        "org.slf4j:jcl-over-slf4j",
-        "ch.qos.logback:logback-classic",
-        "org.eclipse.persistence:javax.persistence:2.1.1",
-        "org.slf4j:jcl-over-slf4j"
+        // Spring
+            "org.springframework:spring-context",
+            "org.springframework:spring-core",
+            "org.springframework:spring-webmvc",
+            "org.springframework.boot:spring-boot-devtools",
+            //"org.springframework.security:spring-security-web:${v.security}",
+            //"org.springframework.security:spring-security-config:${v.security}",
+            "org.springframework.boot:spring-boot-starter-thymeleaf",
+            //"org.thymeleaf.extras:thymeleaf-extras-springsecurity4:${v.thy_security}",
+        // DB
+            "org.springframework:spring-tx",
+            "org.springframework:spring-jdbc",
+            "org.hsqldb:hsqldb",
+            "org.eclipse.persistence:javax.persistence:2.1.1",
+        // Logging
+            "org.slf4j:jcl-over-slf4j",
+            "ch.qos.logback:logback-classic",
+            "org.slf4j:jcl-over-slf4j"
+
     )
-
-    // providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-
-    /*runTime(
-        "org.slf4j:slf4j-api"
-    )*/
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
